# informes_ia_proyectos

./: .env.example  .gitignore  README.md  ejemplo_fastapi.py  pyproject.toml  reportes_db.sqlite  requirements.txt
informes_ia/: __init__.py  ai_report.py  asana_client.py  backlog_analyzer.py  config.py  config_dinamica.py  db.py  docs_context.py  event_tracker.py  historial-__init__.py  historial-estados.py  historial-prueba_flujo.py  historial-servicio.py  historial-validacion.py  logging_utils.py  main.py  normalizacion.py  pipeline_real.py  preprocess.py  prueba_asana.py  prueba_lab.py  render.py  service.py  software_auditor.py  worker.py
informes_ia/historial/: __init__.py  almacen.py  estados.py  prueba_flujo.py  servicio.py
informes_ia/templates/: reporte.html.j2
